APARTADO 1 - Práctica 3 ----------------------- Realización del primer apartado de la práctica 3 de Sistemas de información.
-Creación de la estructura básica de la práctica
-Creación de la clase App
-Creación de la clase dimPACIENTE
-Creación de la clase dimHOSPITAL
-Creación de la clase dimTIEMPO
-Creación de la interfaz RepositorioHechos
-Creación de la interfaz RepositorioHospital
-Creación de la interfaz RepositorioPaciente
-Creación de la interfaz RepositorioTiempo
-Creación de la clase tablaHECHOS
-Añadido application.properties
-Actualización de pom.xml
-Añadido SSI_P3.iml

NOTA: Hay errores que aún hay que solucionar

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,51 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Prac3-SSI</artifactId>
+    <artifactId>taller11-ssii</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <name>practica3-ssii</name>
+    <url>http://maven.apache.org</url>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+
+    <!-- Spring Boot necesario como proyecto padre -->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.2.7.RELEASE</version>
+    </parent>
+
+    <dependencies>
+
+        <!-- Spring Data REST -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-rest</artifactId>
+        </dependency>
+
+        <!-- Spring Data -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <!-- Driver MySQL -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
+        </dependency>
+
+       <!-- Flyway
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>-->
+
+    </dependencies>
 
 </project>
