--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost/practica3?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/practica3?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=URJC2019!
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 server.port = 8081
