--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
             <version>3.8.0</version>
         </dependency>
 
+        <!-- Mahout -->
+        <dependency>
+            <groupId>org.apache.mahout</groupId>
+            <artifactId>mahout-core</artifactId>
+            <version>0.9</version>
+        </dependency>
+
     </dependencies>
 
 </project>
